<resources>
    <string name="app_name">LingoGo</string>
    <string name="lingogo">LingoGo</string>
    <string name="tu_profesor_de_ingles_de_bolsillo">Tu profesor de ingles de bolsillo</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_cuenta_reg_strate_aqu">¿No tienes cuenta? Regístrate aquí</string>
    <string name="configuraci_n">⚙️ Configuración</string>
    <string name="idioma_de_la_aplicaci_n">Idioma de la aplicación</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="activar_notificaciones">Activar notificaciones</string>
    <string name="tema">Tema</string>
    <string name="claro">Claro</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="oscuro">Oscuro</string>
    <string-array name="idiomas">
        <item>Español</item>
        <item>Inglés</item>
        <item>Francés</item>
        <item>Alemán</item>
    </string-array>
    <string-array name="idiomas_tags">
        <item>#Español</item>
        <item>#Inglés</item>
        <item>#Francés</item>
        <item>#Alemán</item>
        <item>#Italiano</item>
    </string-array>
</resources>