<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/fondo2"
>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        >

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- Título -->
        <TextView
            android:text="@string/configuraci_n"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/naranja"
            android:layout_marginBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Opción idioma -->
        <TextView
            android:text="@string/idioma_de_la_aplicaci_n"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinnerIdioma"
            android:entries="@array/idiomas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Línea divisoria -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <!-- Opción notificaciones -->
        <TextView
            android:text="@string/notificaciones"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/switchNotificaciones"
            android:text="@string/activar_notificaciones"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Línea divisoria -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <!-- Opción tema -->
        <TextView
            android:text="@string/tema"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radioTema"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioClaro"
                android:text="@string/claro"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioOscuro"
                android:text="@string/oscuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <!-- Línea divisoria -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <!-- Botón cerrar sesión -->
        <Button
            android:id="@+id/btnCerrarSesion"
            android:text="@string/cerrar_sesi_n"
            android:backgroundTint="@color/naranja"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
